# foobench

./: .gitignore  LICENSE  README.md  pyproject.toml
foobench/: dynamic.py  foos.py  objective.py  plot.py
foobench/nk/: __init__.py  ising_model.py  nk_model.py
tests/: test_objective.py
tests/test_foobench/test_nk/: test_ising_model.py
